# snoopy

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  requirements.txt
client/: CMakeLists.txt  Makefile  cert_verify_config.h  client.cpp
common/: CMakeLists.txt  block.cpp  block.h  bucket_sort.cpp  bucket_sort.h  cert_verifier.cpp  common.h  crypto.cpp  crypto.h  empty_client_pubkey.h  identity_verifier.cpp  load_balancer_client_enc_pubkey.h  obl_primitives.h  par_obl_primitives.cpp  par_obl_primitives.h  ring_buffer.h  suboram_enc_pubkey.h  test_ring_buffer.cpp  utility.h  verify_callback.cpp
common/log/: CMakeLists.txt  log.cpp  log.h
common/protos/: oram.proto
config/: client.config  lb_1.config  lb_10.config  lb_5.config  suboram.config
experiments/artifact_figures/artifact/: baselines.json
experiments/artifact_figures/paper/: baselines.json  scale_throughput.dat_300  scale_throughput.dat_500
load_balancer/: CMakeLists.txt  Makefile  load_balancer.edl
load_balancer/enc/: .balancer.h.swp  CMakeLists.txt  Makefile  balancer.cpp  balancer.h  cert_verify_config.h  ecalls.cpp  enc.conf  obl_primitives.cpp  openssl_server.cpp  test_balancer.cpp  test_balancer.h
load_balancer/host/: CMakeLists.txt  Makefile  host.cpp  host.h
planner/: planner.py  plannerBenchmark.py  scaleData.py
scripts/: balancer_benchmark.py  figure11.sh  figure13.sh  figure14.sh  figure9.sh  get_baselines.py  process_baselines.sh  provision_machines.sh  runExperiment.py  suboram_benchmark.py  update_config.py
scripts/config/: adaptiveDebug.json  adaptiveScaleThroughput.json  adaptiveScaleThroughputOblix.json  adaptiveScaleThroughputOblix_300.json  adaptiveScaleThroughputOblix_500.json  adaptiveScaleThroughput_300.json  adaptiveScaleThroughput_500.json  balancerMakeBatch.json  balancerMatchResponses.json  balancer_benchmark.config  basic.json  client.config  client2.config  lb.config  lb2.config  machines.json  my.cnf  scaleBatch.json  scaleData.json  scaleDataLatency.json  suboram.config  suboram2.config  suboramProcessBatch.json  suboramProcessBatchThreads.json  suboramSort.json  suboram_benchmark.config  testScaleDataLatency.json
scripts/fig/: balancers_vs_latency.py  balancers_vs_throughput.py  balancers_vs_throughput_bounded.py  baselines.json  config.py  custom_style.py  dumbo_figs.key  epoch_time.py  load_balancer.graffle  load_balancer_make_batches.graffle  load_balancer_match_resps.graffle  micro_balancer_make_batch.py  micro_balancer_match_resps.py  micro_suboram.py  parallel_legend.py  params_alphas.py  params_overheads.py  params_scaling_capacity.py  params_varying_N.py  planner_config.py  planner_cost.py  planner_legend.py  scale_breakdown.py  scale_breakdown_1024.py  scale_breakdown_1048576.py  scale_breakdown_32768.py  scale_breakdown_legend.py  scale_data.py  scale_throughput.py  scooby_oblix.dat_300  scooby_oblix.dat_500  scooby_oblix.py  sort_parallel.py  suboram.graffle  suboram_legend.py  suboram_new.graffle  suboram_parallel.py  suborams_vs_latency.py  system_architecture.graffle  system_steps.graffle  (+1 more)
scripts/obladi/: runExperiment.py
scripts/obladi/config/: batch-500.json
scripts/oblix/: runExperiment.py
scripts/oblix/config/: machines.json  oblix_benchmark.json
scripts/util_py3/: azure_util.py  ec2_util.py  math_util.py  ssh_util.py
suboram/: CMakeLists.txt  Makefile  suboram.edl
suboram/enc/: CMakeLists.txt  Makefile  cert_verify_config.h  ecalls.cpp  enc.conf  oblix_suboram.cpp  suboram.cpp  suboram.h
suboram/host/: CMakeLists.txt  Makefile  host.cpp  host.h
suboram/host/oblix/: RAMStore.cpp  RAMStore.hpp  RAMStoreEnclaveInterface.h  Utilities.cpp  Utilities.h
